dark mode issues

--- a/ticketing-system-frontend-admin/src/theme/_color.scss
+++ b/ticketing-system-frontend-admin/src/theme/_color.scss
@@ -36,4 +36,5 @@ $medium-Purple:#8A48EF;
 $emerald:#6ACE7A;
 $cornflower-Blue:#6AB4F0;
 $burnt-sienna:#E67844;
-$vip-silver:#C0C0C0
+$vip-silver:#C0C0C0;
+$header-text:var(--header-text);
