--- a/ticketing-system-frontend-admin/src/theme/_custome.scss
+++ b/ticketing-system-frontend-admin/src/theme/_custome.scss
@@ -4,7 +4,7 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
-  color: $blue-lagoon;
+  color: $header-text;
   margin: 0;
 
   @media only screen and (min-width: 320px) and (max-width: 767px) {
